<resources>
    <string name="app_name">UE-ProyectoIntegrador</string>
    <string name="tv_movie_name">Movie Name</string>
    <string name="tv_rating">0.0</string>
    <string name="tv_about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus augue est, vulputate vitae cursus a, dignissim at tellus. Aliquam velit nisi, mattis non condimentum ut, tincidunt sit amet odio. Nulla turpis libero, volutpat imperdiet urna vel, porta viverra nisi. Sed ac dui quis felis faucibus luctus. Curabitur consequat orci nec arcu cursus, in vestibulum felis eleifend. Nunc porta libero ligula, vitae commodo metus fermentum id.</string>
    <string name="btn_select">Select Session</string>
    <string name="tv_ibdm_rating_txt">IBDM</string>
    <string name="tv_ibdm_usr_txt">Users rating</string>
    <string name="txt_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Seción</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="tvLocation">Madrid</string>
    <string name="btn_filter">Filtrar por cine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txtBtnLogin">Perfil</string>
    <string name="action_register">Registrarce</string>
    <string name="no_data">Debes Introducir tu email</string>
    <string name="msg_errorData">Error en el email o en el password</string>
    <string name="login_ok">Bienvenido</string>
    <string name="txt_Pwd">El password debe tener al menos 8 caracteres</string>
    <string name="msg_registerOk">Usuario registrado!</string>
    <string name="msg_registerNoOk">Usuario no se ha podido registrar</string>
    <string name="msg_userNoResgister">Email no registrado</string>
    <string name="tv_session_info">Seleccione una sesión para ver la pelicula:</string>
    <string name="hint_edit_DataTime">Selecciona la fecha</string>
    <string name="txt_hour">Selecciona la hora</string>
    <string name="txt_available">Disponible</string>
    <string name="txt_occupied">Ocupados</string>
    <string name="txt_chose">Seleccionado</string>
    <string name="comprar_entradas">Comprar entradas</string>
</resources>