<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:padding="@dimen/global_padding"
    tools:context=".MovieActivity">

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_movie_name"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/movie_title">
    </TextView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="603dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_name"
        tools:layout_editor_absoluteX="-6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_name">

            <ImageView
                android:id="@+id/imgv_about_movie"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/creed">

            </ImageView>

            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_imdb_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tv_usr_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/movie_title"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_rating_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_imdb_rating_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_ibdm_rating_txt"
                    android:textAlignment="center"
                    android:textColor="@color/textSecondary">
                </TextView>

                <TextView
                    android:id="@+id/tv_usr_rating_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_ibdm_usr_txt"
                    android:textAlignment="center"
                    android:textColor="@color/textSecondary">

                </TextView>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding"
                android:text="sidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqndsidnidnqindiqiqnqdiqndiqnd"
                android:textAlignment="textStart"
                android:textColor="@color/textSecondary"
                app:layout_constraintTop_toBottomOf="@id/ll_rating">

            </TextView>

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/global_padding"
                android:textColor="@color/textSecondary"
                app:layout_constraintTop_toBottomOf="@id/tv_about">

            </TextView>

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textSecondary"
                app:layout_constraintTop_toBottomOf="@id/tv_about">

            </TextView>
        </LinearLayout>


    </ScrollView>

<Button
    android:id="@+id/btn_select"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_select"
    android:textColor="@color/white"
    android:background="@color/buttonColor"
    app:layout_constraintBottom_toBottomOf="parent">
</Button>

</androidx.constraintlayout.widget.ConstraintLayout>